Documentation edits made through Mintlify web editor

--- a/app-builder/builder/features/affiliate.mdx
+++ b/app-builder/builder/features/affiliate.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Affiliate'
-description: 'Description of your new file.'
+title: "Affiliate"
+description: "Description of your new file."
 icon: "circle-user"
 ---
 
@@ -10,9 +10,19 @@ icon: "circle-user"
 
 **Nền**
 
-- Chọn màu nền cho tiêu đề bằng cách nhấn ô vuông ![][image120] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- Chọn màu nền cho tiêu đề bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image506_89ff66f126.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Hiển thị tiêu đề:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho trang cá nhân. Ví dụ, nếu tiêu đề là "Liên kết hoa hồng" thì sẽ hiển thị như sau:
 
@@ -25,8 +35,17 @@ icon: "circle-user"
   />
 </Frame>
 
-- **Kích thước/ Màu sắc**:
-  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần thanh toán tại ![][image125]
+- **Kích thước/Màu sắc**:
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần thanh toán tại
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image505_d1403fe811.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Tổng quan**
 
