--- a/app-builder/builder/features/loyalty.mdx
+++ b/app-builder/builder/features/loyalty.mdx
@@ -1,6 +1,37 @@
 ---
-title: 'Loyalty'
-description: 'Description of your new file.'
+title: "Loyalty"
+description: "Description of your new file."
 icon: "circle-user"
 ---
+## **6.4. Loyalty** 
 
+**Hạng thành viên:**
+
+* **\- Thêm mới:**  
+* **Bước 1:** Người dùng nhấn vào nút "Thêm mới"  
+  ![][image396]
+
+  Nút thêm mới  
+* **Bước 2:** Người dùng nhập **"**Tên hạng thành viên", “ Chi tiêu tối thiếu để đạt hạng”, “Tỉ lệ khuyến mãi”, “Tổng tiền giảm tối đa” ![][image397]  
+* Thêm dữ liệu  
+*   
+  * **Bước 3:** Người dùng nhấn "Thêm mới" để tiến hành thêm dữ liệu hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
+* **Chỉnh sửa:**  
+  * **Bước 1:** Người dùng nhấn vào nút ![][image242]để đến trang chỉnh sửa
+
+  ![][image398]
+
+  * Nút chỉnh sửa  
+  * **Bước 2**: Người dùng nhập **"**Tên hạng thành viên", “ Chi tiêu tối thiếu để đạt hạng”, “Tỉ lệ khuyến mãi”, “Tổng tiền giảm tối đa” 
+
+  ![][image399]
+
+  * Chỉnh sửa dữ liệu  
+  * **Bước 3:** Người dùng nhấn **"**Lưu chỉnh sửa" để tiến hành chỉnh sửa dữ liệu hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
+* **Xóa:**  
+  * **Bước 1:** Người dùng nhấn vào nút ![][image245]để xóa dữ liệu
+
+  ![][image400]
+
+  * Nút xóa dữ liệu  
+  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa ảnh khỏi banner hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
