--- a/app-builder/builder/features/automation.mdx
+++ b/app-builder/builder/features/automation.mdx
@@ -3,4 +3,160 @@ title: 'Automation'
 description: 'Description of your new file.'
 icon: "circle-user"
 ---
+## **6.1. Automation** {#6.1.-automation}
+
+### **6.1.1. Giới thiệu về Automation**
+
+Automation trong AppMinis là công cụ giúp bạn tự động hóa các quy trình chăm sóc khách hàng, marketing và vận hành mà không cần lập trình.  
+ Với tính năng này, bạn có thể tạo ra các luồng hành động tự động (automation flow) dựa trên hành vi người dùng hoặc sự kiện cụ thể trong ứng dụng.
+
+Ví dụ:
+
+* Khi khách hàng đăng ký tài khoản mới, hệ thống tự động gửi tin nhắn chào mừng qua Zalo OA hoặc Email.
+
+* Khi khách hàng hoàn tất đơn hàng, hệ thống có thể gửi tin nhắn cảm ơn kèm mã giảm giá.
+
+* Khi khách hàng không hoạt động trong 7 ngày, hệ thống gửi lời nhắc quay lại ứng dụng.
+
+Tất cả đều được thực hiện hoàn toàn tự động, giúp doanh nghiệp tiết kiệm thời gian và tối ưu tương tác với người dùng.
+
+### **6.1.2. Cấu trúc Automation**
+
+Mỗi kịch bản tự động (Automation Flow) trong AppMinis gồm 3 thành phần chính:
+
+**1\. Trigger (Trình kích hoạt)**
+
+Trigger là sự kiện khởi đầu cho luồng tự động. Đây là điều kiện “nếu có” xảy ra, hệ thống sẽ bắt đầu xử lý chuỗi hành động.
+
+Một số ví dụ phổ biến:
+
+* Khi người dùng đăng ký tài khoản mới
+
+* Khi người dùng hoàn tất đơn hàng
+
+* Khi người dùng click vào một nút cụ thể trong Mini App
+
+* Khi đến một ngày nhất định (ví dụ: sinh nhật, ngày hết hạn gói dịch vụ)
+
+Bạn có thể chọn Trigger phù hợp với mục tiêu của chiến dịch.
+
+---
+
+**2\. Condition (Điều kiện)**
+
+Condition giúp bạn lọc và xác định đối tượng hoặc hoàn cảnh cụ thể trước khi hành động xảy ra.
+
+Ví dụ:
+
+* Chỉ gửi tin nhắn cho người dùng có vai trò là khách hàng VIP.
+
+* Chỉ gửi nếu đơn hàng có giá trị trên 500.000đ.
+
+* Chỉ thực hiện nếu người dùng chưa từng nhận ưu đãi này trước đó.
+
+Điều kiện có thể được kết hợp linh hoạt để tạo các luồng thông minh và cá nhân hóa trải nghiệm người dùng.
+
+---
+
+**3\. Action (Hành động)**
+
+Action là bước thực hiện hành động tự động sau khi thỏa mãn Trigger và Condition.
+
+Các loại hành động phổ biến trong AppMinis bao gồm:
+
+* 📩 Gửi tin nhắn ZNS (qua Zalo Official Account): gửi thông báo xác nhận đơn hàng, OTP, khuyến mãi, chúc mừng sinh nhật,...
+
+* 💬 Gửi tin nhắn qua OA (Zalo Official Account Message): nhắn tin chăm sóc khách hàng hoặc mời tham gia sự kiện.
+
+* 📧 Gửi Email tự động: chào mừng, khuyến mãi, nhắc nhở giỏ hàng chưa thanh toán,...
+
+* 📱 Gửi SMS: gửi thông tin nhanh hoặc xác thực người dùng.
+
+* 🔄 Kích hoạt hành động nội bộ khác: ví dụ tạo điểm thưởng, cập nhật trạng thái đơn hàng, thêm người dùng vào nhóm loyalty,...
+
+Mỗi Action có thể được thực hiện ngay lập tức hoặc trì hoãn (delay) theo thời gian bạn định nghĩa (ví dụ: sau 1 giờ, sau 3 ngày,...).
+
+### **6.1.3. Cách tạo một luồng Automation**
+
+Để tạo một Automation Flow mới trong AppMinis, bạn chỉ cần thực hiện:
+
+Bước 1**:** Truy cập mục **Chiến dịch** trong thẻ **Automation** trong bảng quản trị.
+
+![][image386]
+
+Chiến dịch trong Automation
+
+Bước 2**:** Nhấn **Thêm chiến dịch** để bắt đầu.
+
+![][image387]
+
+Thêm chiến dịch trong Automation
+
+Bước 3**:** Thay đổi thông tin chiến dịch và **Lưu**
+
+![][image388]
+
+Thay đổi thông tin chiến dịch 
+
+Bước 4**:** Kéo thả hoặc bấm chọn **Trigger** (nếu cần sự kiện kích hoạt ).
+
+![][image389]
+
+Danh sách Trigger
+
+![][image390]
+
+Sau khi chọn Trigger
+
+Bước 5**:** Thêm **Điều kiện** (điều kiện ràng buộc nếu có).
+
+![][image391]    
+
+Danh sách điều kiện
+
+![][image392]
+
+Setup thông tin điều kiện
+
+Bước 5**:** Chọn **Hành động (bắt buộc)** — ví dụ: gửi ZNS, OA, Email, hoặc SMS.
+
+![][image393]
+
+Setup thông tin hành động
+
+Bước 6**:** Xem lại luồng, bật trạng thái **Lưu** hoặc **Kích hoạt (Active)**.
+
+![][image394]
+
+Setup thông tin hành động
+
+Hệ thống sẽ tự động chạy luồng mỗi khi Trigger xảy ra.
+
+### **6.1.4. Lợi ích của Automation**
+
+* Tiết kiệm thời gian: Không cần thao tác thủ công gửi từng tin.
+
+* Cá nhân hóa trải nghiệm: Gửi đúng nội dung, đúng thời điểm, đúng người.
+
+* Tăng tỷ lệ chuyển đổi: Duy trì tương tác và chăm sóc khách hàng liên tục.
+
+* Đồng bộ dữ liệu: Mọi hành động, thông tin và phản hồi đều được ghi nhận tự động vào hệ thống.
+
+
+### **6.1.5. Ví dụ thực tế**
+
+Kịch bản: Chăm sóc khách hàng sau mua hàng
+
+* **Trigger:** Người dùng hoàn tất thanh toán đơn hàng.
+
+* **Điều kiện:** Giá trị đơn hàng \> 300.000đ.
+
+* **Hành động:**
+
+  1. Gửi ZNS xác nhận đơn hàng.
+
+  2. Sau 2 ngày → gửi OA cảm ơn và mời đánh giá sản phẩm.
+
+  3. Sau 7 ngày → gửi Email khuyến mãi “Mua lần 2 giảm 10%”.
+
 
