--- a/app-builder/builder/pages/booking-page.mdx
+++ b/app-builder/builder/pages/booking-page.mdx
@@ -3,4 +3,223 @@ title: 'Booking'
 description: 'Description of your new file.'
 icon: "circle-user"
 ---
+###       **3.3.4. Booking**
+
+**Bố cục**  
+Người dùng có thể lựa chọn các bố cục hiển thị sản phẩm, bao gồm: Bố cục dọc, Bố cục ngang, Trượt ngang, Tab danh mục, Danh sách sản phẩm, Nhóm danh mục  
+![][image150]
+
+**Thêm dữ liệu mới**
+
+* **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
+
+![][image151]
+
+* Nút thêm dữ liệu  
+  * **Bước 2:**  
+    * Người dùng nhập tên danh mục và chọn link liên kết  
+    * Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" cho danh mục và banner danh mục  
+    * Và chọn danh mục con
+
+![][image152]
+
+* Thêm dữ liệu dịch vụ  
+  * **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
+* **Chỉnh sửa:**  
+  * **Bước 1:** Người dùng nhấn vào nút ![][image94]để đến trang chỉnh sửa
+
+![][image153]
+
+* Nút chỉnh sửa  
+  * **Bước 2:** Người dùng nhập tên danh mục và chọn link liên kết, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn danh mục con
+
+![][image154]
+
+* Trang chỉnh sửa dữ liệu  
+  * **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
+* **Xóa:**  
+  * **Bước 1:** Người dùng nhấn vào nút ![][image97]để xóa dữ liệu
+
+![][image155]
+
+* Nút xóa  
+  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+
+**Tiêu đề**
+
+	**Nền**
+
+* Chọn màu nền cho tiêu đề dịch vụ bằng cách nhấn ô vuông ![][image156]sau đó chọn màu  
+  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]  
+  * Xóa màu nền bằng cách nhấn nút ![][image69]
+
+
+* **Hiển thị tiêu đề:**  
+  * Người dùng nhấn nút ![][image80]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử dịch vụ. Ví dụ, nếu tiêu đề là "Danh mục dịch vụ" thì tiêu đề sẽ như thế này
+
+![][image157]
+
+* Tiêu đề Dịch vụ  
+  *   
+* **Cỡ chữ:**  
+  * Người dùng có thể điều chỉnh kích thước cỡ chữ tại ![][image158]
+
+		**Màu chữ:**
+
+* Người dùng có thể điều chỉnh màu sắc cho tiêu đề của dịch vụ tại ![][image159]  
+* **Hiển thị icon:**  
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị icon và không có hiển thị icon 
+
+**Danh mục chính**
+
+* **Nền:**  
+  * Chọn màu nền cho danh mục chính bằng cách nhấn ô vuông ![][image156]sau đó chọn màu  
+    * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image68]  
+    * Xóa màu nền bằng cách nhấn nút ![][image69]  
+    * 
+
+  	**Hiển thị icon/ hình ảnh:**
+
+* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị icon/ hình ảnh và không hiển thị icon/ hình ảnh  
+  	**Kích thước:**
+
+  Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại ![][image136]
+
+  	**Kiểu hình ảnh**
+
+  Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
+
+		**Bo góc**
+
+* Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của danh mục chính tại ô nhập ![][image140]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image141]
+
+		**Hiển thị tên danh mục:**
+
+* Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có tên danh mục và không có tên danh mục
+
+		**Kích thước/ Màu sắc**:
+
+* Người dùng có thể điều chỉnh kích thước và màu sắc cho danh mục chính tại ![][image160]
+
+		**Hiển thị danh mục phụ**
+
+* Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị danh mục phụ và không có hiển thị danh mục phụ.  
+  *   
+* **Danh mục phụ**  
+  * **Hiển thị tên**   
+    * Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị tên và không có hiển thị tên.
+
+    **Hiển thị hình ảnh**
+
+      Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị hình ảnh và không có hiển thị hình ảnh.
+
+* **Banner**  
+  * **Hiển thị banner**  
+    * Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị banner và không có hiển thị banner.
+
+		**Chiều cao**
+
+Người dùng có thể nhập hoặc tăng/giảm chiều cao của phần tử banner ![][image161]
+
+* **Lề ngoài**  
+  * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử banner với các phần tử khác bằng nút ![][image162]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image163]  
+  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử banner với lề màn hình điện thoại bằng nút ![][image164]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image165]  
+* **Lề trong**  
+  * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử banner với hình ảnh bên trong phần tử banner bằng nút ![][image166]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image167]  
+  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử banner với hình ảnh bên trong phần tử banner bằng nút ![][image168]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image169]  
+* **Bo góc**
+
+  Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần tử banner tại ô nhập ![][image170]hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image171]
+
+* **Viền**  
+  * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần tử banner tại ô nhập ![][image172]  
+  * Chọn màu cho viền bằng cách nhấn ô vuông ![][image173]sau đó chọn màu  
+  * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image174]  
+  * Xóa viền bằng cách nhấn nút ![][image175]  
+* **Đổ bóng**  
+  * Người dùng có thể chọn độ lớn đổ bóng của phần tử banner tại ô ![][image176]  
+  * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image177]sau đó chọn màu  
+  * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image178]  
+  * Xóa đổ bóng bằng cách nhấn nút ![][image179]
+
+	**Thẻ dịch vụ**
+
+		**Lề ngoài**
+
+* Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử thẻ dịch vụ với các phần tử khác bằng nút ![][image162]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image163]  
+  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử thẻ dịch vụ với lề màn hình điện thoại bằng nút ![][image164]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image165]  
+  * **Lề trong**  
+    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử thẻ dịch vụ với hình ảnh bên trong phần tử thẻ dịch vụ bằng nút ![][image166]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image167]  
+    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử thẻ dịch vụ với hình ảnh bên trong phần tử thẻ dịch vụ bằng nút ![][image168]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image169]
+
+		**Chiều cao**
+
+Người dùng có thể nhập hoặc tăng/giảm chiều cao của phần tử thẻ dịch vụ![][image161]
+
+		**Kiểu hình ảnh**
+
+Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
+
+* **Nền**  
+  * Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image137]sau đó chọn màu  
+    * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image138]  
+    * Xóa màu nền bằng cách nhấn nút ![][image139]  
+  * **Bo góc**  
+    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image140]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image141]  
+  * **Viền**  
+    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ dịch vụ tại ô nhập ![][image142]  
+    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image143]sau đó chọn màu  
+    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image144]  
+    * Xóa viền bằng cách nhấn nút ![][image145]  
+  * **Đổ bóng**  
+    * Người dùng có thể chọn độ lớn đổ bóng của thẻ dịch vụ tại ô ![][image146]  
+    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image147]sau đó chọn màu  
+    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image148]  
+    * Xóa đổ bóng bằng cách nhấn nút ![][image149]  
+  * **Hiển thị tên dịch vụ**:  
+    * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có tên dịch vụ và không có tên dịch vụ  
+  * **Hiển thị danh mục:**  
+    * Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục  
+  * **Hiển thị giá tiền:**  
+    * Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có giá tiền và không có giá tiền  
+  * **Hiển thị giá giảm:**  
+    * Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc![][image111]  
+  * **Sản phẩm Sale:**  
+    * Người dùng nhấn nút ![][image112]để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale  
+  * **Hiển thị nhãn:**  
+    * Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.  
+  * **Hiển thị yêu thích:**  
+    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích  
+  * **Hiển thị đánh giá:**  
+    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số sao đánh giá và không có số sao đánh giá  
+  * **Hiển thị loại dịch vụ:**  
+    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có loại dịch vụ và không có loại dịch vụ
+
+		**Hiển thị thời gian dịch vụ:**
+
+Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có thời gian dịch vụ và không có thời gian dịch vụ
+
+* **Hiển thị số lượng yêu thích**  
+  *  Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích
+
+		**Hiển thị đánh giá:**
+
+Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có đánh giá và không có đánh giá
+
+		**Hiển thị số lượng yêu thích:**
+
+Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích
+
+* **Hiển thị số lượng đã bán:**  
+  * Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán  
+  * **Hiển thị nút đặt lịch:**  
+    * Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2 trạng thái có nút đặt lịch và không có nút đặt lịch
+
+		**Kiểu nút đặt lịch:** 
+
+Người dùng có thể chọn chuyển đổi hiển thị nút đặt lịch giữa icon hoặc button ![][image118]
+
+		**Kiểu thẻ dịch vụ:** 
+
+Người dùng có thể chọn chuyển đổi hiển thị thẻ dịch vụ giữa ngang hoặc dọc ![][image180]
 
