Documentation edits made through Mintlify web editor

--- a/app-builder/builder/features/automation.mdx
+++ b/app-builder/builder/features/automation.mdx
@@ -3,7 +3,7 @@ title: 'Automation'
 description: 'Description of your new file.'
 icon: "circle-user"
 ---
-## **6.1. Automation** {#6.1.-automation}
+## **6.1. Automation** 
 
 ### **6.1.1. Giới thiệu về Automation**
 
