--- a/app-builder/builder/features/minigame.mdx
+++ b/app-builder/builder/features/minigame.mdx
@@ -4,7 +4,7 @@ description: "Description of your new file."
 icon: "circle-user"
 ---
 
-### **3.3.8. Mini Game**
+## **6.5. Minigame**
 
 **Dữ liệu**
 
@@ -78,7 +78,8 @@ icon: "circle-user"
 **Nền**
 
 - Chọn màu nền cho tiêu đề game bằng cách nhấn ô vuông sau đó chọn màu
-<Frame caption="">
+
+<Frame caption>
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image263_c118d867fd.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
@@ -86,10 +87,11 @@ icon: "circle-user"
     title=""
   />
 </Frame>
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-    - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-  - **Hiển thị tiêu đề:**
-    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho trang cá nhân. Ví dụ, nếu tiêu đề là "Game" thì sẽ hiển thị như sau:
+
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- **Hiển thị tiêu đề:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho trang cá nhân. Ví dụ, nếu tiêu đề là "Game" thì sẽ hiển thị như sau:
 
 <Frame caption="Tiêu đề game  ">
   <img
@@ -102,7 +104,8 @@ icon: "circle-user"
 
 - **Kích thước/ Màu sắc**:
   - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần game tại
-<Frame caption="">
+
+<Frame caption>
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image264_7b15803934.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
@@ -110,6 +113,7 @@ icon: "circle-user"
     title=""
   />
 </Frame>
+
 - **Hiển thị Phần thưởng**:
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có phần thưởng và không có phần thưởng
 - **Hiển thị Hướng dẫn**:
@@ -124,7 +128,7 @@ icon: "circle-user"
 
 Người dùng có thể điều chỉnh vị trí tại
 
-<Frame caption="">
+<Frame caption>
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image265_7a71efdfad.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
@@ -136,7 +140,8 @@ Người dùng có thể điều chỉnh vị trí tại
 **Màu nền phần thưởng 1**
 
 Chọn màu nền cho phần thưởng 1 bằng cách nhấn ô vuông sau đó chọn màu
-<Frame caption="">
+
+<Frame caption>
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image266_4970e9eb94.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
@@ -144,13 +149,15 @@ Chọn màu nền cho phần thưởng 1 bằng cách nhấn ô vuông sau đó 
     title=""
   />
 </Frame>
+
 - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Màu viền vòng quay**
 
 Chọn màu viền vòng quay bằng cách nhấn ô vuông sau đó chọn màu
-<Frame caption="">
+
+<Frame caption>
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image267_3bab5b23c8.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
@@ -158,13 +165,15 @@ Chọn màu viền vòng quay bằng cách nhấn ô vuông sau đó chọn màu
     title=""
   />
 </Frame>
+
 - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Nút quay**
 
 Chọn màu nút quay bằng cách nhấn ô vuông sau đó chọn màu
-<Frame caption="">
+
+<Frame caption>
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image313_a6f6b9873b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
@@ -172,6 +181,7 @@ Chọn màu nút quay bằng cách nhấn ô vuông sau đó chọn màu
     title=""
   />
 </Frame>
+
 - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền nút quay bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa màu nút quay bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
   - **Liên kết banner chia sẻ game**
