Documentation edits made through Mintlify web editor

--- a/app-builder/builder/features/automation.mdx
+++ b/app-builder/builder/features/automation.mdx
@@ -80,57 +80,67 @@ Mỗi Action có thể được thực hiện ngay lập tức hoặc trì hoãn
 
 Để tạo một Automation Flow mới trong AppMinis, bạn chỉ cần thực hiện:
 
-Bước 1**:** Truy cập mục **Chiến dịch** trong thẻ **Automation** trong bảng quản trị.
+<Steps>
 
-![][image386]
+  <Step title="Truy cập Chiến dịch trong Automation">
+    Truy cập mục **Chiến dịch** trong thẻ **Automation** trong bảng quản trị.
 
-Chiến dịch trong Automation
+    Chiến dịch trong Automation  
+    ![][image386]
+  </Step>
 
-Bước 2**:** Nhấn **Thêm chiến dịch** để bắt đầu.
+  <Step title="Thêm chiến dịch mới">
+    Nhấn **Thêm chiến dịch** để bắt đầu.
 
-![][image387]
+    Thêm chiến dịch trong Automation  
+    ![][image387]
+  </Step>
 
-Thêm chiến dịch trong Automation
+  <Step title="Thiết lập thông tin chiến dịch">
+    Thay đổi thông tin chiến dịch và nhấn **Lưu**.
 
-Bước 3**:** Thay đổi thông tin chiến dịch và **Lưu**
+    Thay đổi thông tin chiến dịch  
+    ![][image388]
+  </Step>
 
-![][image388]
+  <Step title="Thêm Trigger (nếu cần)">
+    Kéo thả hoặc bấm chọn **Trigger** (nếu cần sự kiện kích hoạt).
 
-Thay đổi thông tin chiến dịch 
+    Danh sách Trigger  
+    ![][image389]
 
-Bước 4**:** Kéo thả hoặc bấm chọn **Trigger** (nếu cần sự kiện kích hoạt ).
+    Sau khi chọn Trigger  
+    ![][image390]
+  </Step>
 
-![][image389]
+  <Step title="Thêm Điều kiện (nếu có)">
+    Thêm **Điều kiện** (điều kiện ràng buộc nếu có).
 
-Danh sách Trigger
+    Danh sách điều kiện  
+    ![][image391]
 
-![][image390]
+    Setup thông tin điều kiện  
+    ![][image392]
+  </Step>
 
-Sau khi chọn Trigger
+  <Step title="Chọn Hành động (bắt buộc)">
+    Chọn **Hành động** (bắt buộc) — ví dụ: gửi **ZNS**, **OA**, **Email**, hoặc **SMS**.
 
-Bước 5**:** Thêm **Điều kiện** (điều kiện ràng buộc nếu có).
+    Setup thông tin hành động  
+    ![][image393]
+  </Step>
 
-![][image391]    
+  <Step title="Xem lại & Kích hoạt">
+    Xem lại luồng, sau đó bật trạng thái **Lưu** hoặc **Kích hoạt (Active)**.
 
-Danh sách điều kiện
+    Setup thông tin hành động  
+    ![][image394]
+  </Step>
 
-![][image392]
+</Steps>
 
-Setup thông tin điều kiện
+> Hệ thống sẽ tự động chạy luồng mỗi khi **Trigger** xảy ra.
 
-Bước 5**:** Chọn **Hành động (bắt buộc)** — ví dụ: gửi ZNS, OA, Email, hoặc SMS.
-
-![][image393]
-
-Setup thông tin hành động
-
-Bước 6**:** Xem lại luồng, bật trạng thái **Lưu** hoặc **Kích hoạt (Active)**.
-
-![][image394]
-
-Setup thông tin hành động
-
-Hệ thống sẽ tự động chạy luồng mỗi khi Trigger xảy ra.
 
 ### **6.1.4. Lợi ích của Automation**
 
