--- a/app-builder/builder/features/loyalty.mdx
+++ b/app-builder/builder/features/loyalty.mdx
@@ -3,35 +3,102 @@ title: "Loyalty"
 description: "Description of your new file."
 icon: "circle-user"
 ---
-## **6.4. Loyalty** 
 
-**Hạng thành viên:**
+## **6.4. Loyalty**
 
-* **\- Thêm mới:**  
-* **Bước 1:** Người dùng nhấn vào nút "Thêm mới"  
-  ![][image396]
+### **Hạng thành viên**
 
-  Nút thêm mới  
-* **Bước 2:** Người dùng nhập **"**Tên hạng thành viên", “ Chi tiêu tối thiếu để đạt hạng”, “Tỉ lệ khuyến mãi”, “Tổng tiền giảm tối đa” ![][image397]  
-* Thêm dữ liệu  
-*   
-  * **Bước 3:** Người dùng nhấn "Thêm mới" để tiến hành thêm dữ liệu hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Chỉnh sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image242]để đến trang chỉnh sửa
+#### **Thêm mới**
 
-  ![][image398]
+<Steps>
+  <Step title="Thêm mới hạng thành viên">
+    Người dùng nhấn vào nút **“Thêm mới”** để bắt đầu thêm hạng thành viên.
 
-  * Nút chỉnh sửa  
-  * **Bước 2**: Người dùng nhập **"**Tên hạng thành viên", “ Chi tiêu tối thiếu để đạt hạng”, “Tỉ lệ khuyến mãi”, “Tổng tiền giảm tối đa” 
+    <Frame caption="Nút thêm mới">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image507_c6aba25771.png"
+        alt="Nút thêm mới hạng thành viên trong giao diện Loyalty"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút thêm mới"
+      />
+    </Frame>
+  </Step>
+  <Step title="Nhập thông tin hạng thành viên">
+    Người dùng nhập **“Tên hạng thành viên”**, **“Chi tiêu tối thiểu để đạt hạng”**, **“Tỉ lệ khuyến mãi”**, và **“Tổng tiền giảm tối đa”**.
 
-  ![][image399]
+    <Frame caption="Nhập thông tin hạng thành viên">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image508_3208ab94d0.png"
+        alt="Giao diện nhập thông tin hạng thành viên mới"
+        style={{ borderRadius:"0.5rem" }}
+        title="Thêm dữ liệu hạng thành viên"
+      />
+    </Frame>
+  </Step>
+  <Step title="Lưu dữ liệu mới">
+    Người dùng nhấn **“Thêm mới”** để tiến hành thêm dữ liệu hoặc nhấn **“Hủy bỏ”** để hủy quá trình thêm dữ liệu.
+  </Step>
+</Steps>
 
-  * Chỉnh sửa dữ liệu  
-  * **Bước 3:** Người dùng nhấn **"**Lưu chỉnh sửa" để tiến hành chỉnh sửa dữ liệu hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image245]để xóa dữ liệu
+---
 
-  ![][image400]
+#### **Chỉnh sửa**
 
-  * Nút xóa dữ liệu  
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa ảnh khỏi banner hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
+<Steps>
+  <Step title="Mở trang chỉnh sửa hạng thành viên">
+    Người dùng nhấn vào nút
+
+    <Icon icon="pencil" color="#cfcfcf" size={15} />để mở trang **chỉnh sửa hạng thành viên**.
+
+    <Frame caption="Nút chỉnh sửa">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image509_135c023588.png"
+        alt="Nút chỉnh sửa hạng thành viên trong giao diện Loyalty"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút chỉnh sửa"
+      />
+    </Frame>
+  </Step>
+  <Step title="Chỉnh sửa thông tin hạng thành viên">
+    Người dùng thay đổi **“Tên hạng thành viên”**, **“Chi tiêu tối thiểu để đạt hạng”**, **“Tỉ lệ khuyến mãi”**, và **“Tổng tiền giảm tối đa”**.
+
+    <Frame caption="Chỉnh sửa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image510_b99ca982dd.png"
+        alt="Giao diện chỉnh sửa thông tin hạng thành viên"
+        style={{ borderRadius:"0.5rem" }}
+        title="Chỉnh sửa dữ liệu hạng thành viên"
+      />
+    </Frame>
+  </Step>
+  <Step title="Lưu chỉnh sửa hoặc hủy">
+    Người dùng nhấn **“Lưu chỉnh sửa”** để hoàn tất cập nhật,\
+    hoặc nhấn **“Hủy bỏ”** để hủy quá trình chỉnh sửa.
+  </Step>
+</Steps>
+
+---
+
+#### **Xóa**
+
+<Steps>
+  <Step title="Xóa hạng thành viên">
+    Người dùng nhấn vào nút
+
+    <Icon icon="minus" color="#cfcfcf" size={15} />để **xóa dữ liệu hạng thành viên**.
+
+    <Frame caption="Nút xóa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image511_76410aa3e6.png"
+        alt="Nút xóa dữ liệu hạng thành viên trong giao diện Loyalty"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xóa dữ liệu"
+      />
+    </Frame>
+  </Step>
+  <Step title="Xác nhận thao tác xóa">
+    Khi hộp thông báo xuất hiện, người dùng nhấn **“Xóa ngay”** để **tiến hành xóa hạng thành viên**,\
+    hoặc nhấn **“Hủy”** để **dừng quá trình xóa dữ liệu**.
+
+  </Step>
+</Steps>
